segundo commit adiçao de mais uma lista no html

--- a/index.html
+++ b/index.html
@@ -14,5 +14,13 @@
         <li>Sebastian</li>
     </ul>
 
+    <h1>Plantações do verão</h1>
+    <ul>
+    <li>Rabanete</li>
+    <li>Berinjela</li>
+    <li>Tomate</li>
+    <li>Mirtilo</li>
+    </ul>
+
 </body>
 </html>
