--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <li>Robin</li>
         <li>Leah</li>
         <li>Sebastian</li>
+        <li>Demetrius</li>
+        <li>Abigail</li>
     </ul>
 
     <h1>Plantações do verão</h1>
